# agentic-cardano-swaps

./: .gitignore  README.md  cabal.project.freeze  cabal.project.local  cardano-swaps.cabal  dockerfile  install_cardano_cli.sh  mainnet-params.json  run-talos-agent.sh
.demeter/: Dockerfile  run.sh
app/CLI/: Agent.hs  Common.hs  Parsers.hs  PatchedAgent.hs  Run.hs  Types.hs
docs/: AutonomousAgent.md  IMPLEMENTATION_PLAN.md  OVERVIEW.md  PROJECT_STATUS.md
test/: OpenAIAgent.hs  ProdAgent.hs  TestAIReasoning.hs  TestAgent.hs  TestAgentAPI.hs  TestAgentReasoning.hs  TestChainedProfit.hs  TestOpenAI.hs
